[package]
name = "text_editor"
version = "0.1.0"
authors = ["Adam Chyb <achybby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["term"] }
term_size = "0.3.2"
regex = "1.9.6"
unicode-width = "0.1.11"
